--- a/less/grid.less
+++ b/less/grid.less
@@ -23,6 +23,7 @@
     &:first-child {
         padding-left: 0;
         margin-left: 0;
+
     }
 }
 
@@ -36,6 +37,10 @@
 }
 
 // column types
+.full-width {
+    width: 100%;
+}
+
 .one-third {
     width: 33.33%;
 }
