--- a/css/simple-grid.css
+++ b/css/simple-grid.css
@@ -1,3 +1,9 @@
+/*!
+ * Simple-Grid v0.1.0 (https://github.com/brandonb927/simple-grid)
+ * Copyright 2014 Brandon Brown
+ * Licensed under WTFPL (http://www.wtfpl.net/txt/copying/)
+ */
+
 .clearfix {
   *zoom: 1;
 }
@@ -12,8 +18,6 @@
 *,
 *:before,
 *:after {
-  -webkit-box-sizing: border-box;
-  -moz-box-sizing: border-box;
   box-sizing: border-box;
 }
 .grid {
